@@ -17,6 +17,7 @@ Included
 - Package/extension ZIP metadata extraction deepened for deterministic manifest signals:
 - `.msix/.nupkg/.whl/.jar` manifest text hints are now extracted from ZIP entries (bounded, analysis-only).
 - `.crx/.vsix` now parse `manifest.json` when present in ZIP payloads (permissions/content scripts/update URL domain hints).
+- `.xpi` extension bundles are now supported through the same deterministic ZIP-manifest path.
 - Linux package coverage added to package adapter:
 - `.deb` now parses deterministic AR entry metadata (bounded, no extraction/exec).
 - `.rpm` now captures deterministic lead/header/script/signing hint counters from local bytes only.
